# Netboost

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  NEWS  README.md  cleanup  configure  configure.ac
.test/: filter_rcpp.R
R/: RcppExports.R  data.R  example.R  filter.R  moduleEigengene.R  netboost.R  tools.R  zzz.R
data/: tcga_aml_covariates.rda  tcga_aml_meth_rna_chr18.rda
exec/: test.pl
inst/: NEWS.Rd
inst/doc/: 2019-03-06-11h12m-Netboost.html  netboost.Rmd
inst/mcupgma/: INSTALL  Makefile  README_DEVELOPER  README_USER
inst/mcupgma/clustering_round/: CONTENTS  Heap.hpp  HierarchicalClustering_main.cpp  HierarchicalClustering_with_unknown_edges.cpp  Makefile  test_heap.cpp  (+2 more)
m4/: ax_ext.m4
man/: calculate_adjacency.Rd  cpp_dist_tom.Rd  cpp_filter_base.Rd  cpp_filter_end.Rd  cpp_filter_step.Rd  cpp_tree_search.Rd  cut_dendro.Rd  cut_trees.Rd  dot-onAttach.Rd  dot-onDetach.Rd  mcupgma_example.Rd  mcupgma_exec.Rd  nb_clust.Rd  nb_dist.Rd  nb_example.Rd  nb_filter.Rd  nb_mcupgma.Rd  nb_moduleEigengenes.Rd  nb_plot_dendro.Rd  nb_set_tempdir.Rd  nb_summary.Rd  nb_tranfer.Rd  netboost.Rd  netboostExecPath.Rd  netboostMCUPGMAPath.Rd  netboostPackagePath.Rd  netboostTmpCleanup.Rd  netboostTmpPath.Rd  tcga_aml_meth_rna_chr18.Rd  tree_dendro.Rd  tree_search.Rd
src/: BUILD.txt  Makevars  Makevars.gcc  Makevars.in  RcppExports.cpp  boosting.cpp  config.h.in  dist_tom.cpp  dist_tom.cpp.~1~  filter_rcpp.R  install.libs.R  rdtsc.h  tree_sort.cpp  tree_sorting.R
src/mcupgma/: Makefile  cluster_tree
tools/: ax_check_compile_flag.m4
vignettes/: netboost.Rmd
(+76 files in other folders)
